SCSS refactoring. UI refinements.

--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -1,5 +1,6 @@
 $active-navigation-link-color: orange;
 $fa-font-path:   "../bower_components/font-awesome/fonts";
+$gray-text-color: #444444;
 
 //  Foundation for Sites Settings
 //  -----------------------------
