--- a/app/scss/_contact-card.scss
+++ b/app/scss/_contact-card.scss
@@ -1,5 +1,17 @@
+.contact-cards-container {
+  min-height: 413px;
+
+  @include breakpoint(small only) {
+    padding-left: 3rem;
+    padding-right: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .contact-card {
   //width: 324px;
+  display: none;
   height: 365px;
   max-width: 370px;
   margin-bottom: 3rem;
@@ -16,7 +28,7 @@
     position: absolute;
     width: 100%;
     height: 70%;
-    background-image: url('https://0.s3.envato.com/files/183626516/Image/Image_Profile.jpg');
+    //background-image: url('https://0.s3.envato.com/files/183626516/Image/Image_Profile.jpg');
     background-position: 50%;
     background-size: cover;
     z-index: 3;
@@ -73,6 +85,10 @@
       div.columns:last-of-type {
         //padding-right: 4rem;
       }
+    }
+
+    a span:hover {
+      text-decoration: underline;
     }
 
     span {
