Added animations and portfolio page.

--- a/app/scss/_contact-card.scss
+++ b/app/scss/_contact-card.scss
@@ -99,10 +99,9 @@
       margin-top: 0;
 
       i.fa {
-        position: absolute;
-        left: 10px;
-        margin-top: 6px;
+        margin-top: 19px;
         color: #453875;
+        margin-right: 5px;
       }
 
       //&:first-of-type {
