--- a/app/scss/about-us.scss
+++ b/app/scss/about-us.scss
@@ -2,17 +2,30 @@
   background: url('http://cinescape.us/wp-content/uploads/2016/04/drone_blurred_small.jpg') no-repeat center center;
   @include hero(625px);
 
+  &:before {
+    background-color: rgba(48, 53, 52, 0.38);
+    height: inherit;
+    width: inherit;
+    content: "";
+    position: absolute;
+  }
+
   .hero-text {
     padding-right: 2rem;
 
     h1, h2, h3, h4, h5, p {
       color: white;
+      opacity: 0;
     }
   }
 }
 
 .philosophy {
   min-height: 535px;
+
+  h1, p {
+    opacity: 0;
+  }
 
   div.columns:first-of-type {
     //padding-left: 5rem;
