Added pricing page and better navigation logic.

--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -13,6 +13,9 @@
 @import "body";
 @import "contact-card";
 @import "form";
+@import "pricing-table";
+
 @import "about-us";
 @import "home";
 @import "contact-us";
+@import "pricing";
