--- a/app/scss/_contact-us.scss
+++ b/app/scss/_contact-us.scss
@@ -1,23 +1,25 @@
-h1 {
-  span {
-    float: right;
-    font-size: 2rem;
-    position: relative;
-    bottom: -25px;
-    color: #686868;
+.contact-us {
+  h1 {
+    span {
+      float: right;
+      font-size: 2rem;
+      position: relative;
+      bottom: -25px;
+      color: #686868;
 
-    i {
-      margin-right: 5px;
-    }
+      i {
+        margin-right: 5px;
+      }
 
-    @include breakpoint(small only) {
-      font-size: 1.2rem;
-      position: initial;
-      margin-top: 5px;
+      @include breakpoint(small only) {
+        font-size: 1.2rem;
+        position: initial;
+        margin-top: 5px;
+      }
     }
   }
-}
 
-form {
-  opacity: 0;
+  form {
+    opacity: 0;
+  }
 }
