--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -31,9 +31,13 @@
       }
     }
 
-    button {
+    .button {
       margin-top: 1rem;
       position: relative;
     }
+  }
+
+  h1 + p {
+    font-size: 160%;
   }
 }
