--- a/app/scss/_offcanvas.scss
+++ b/app/scss/_offcanvas.scss
@@ -6,4 +6,20 @@
 .off-canvas {
   height: 100vh;
   max-height: 100vh;
+  border-left: solid 1px #8F8F8F;
+  background-color: white;
+
+  ul.menu {
+    & > li {
+      i {
+        position: relative;
+        top: 1px;
+        //margin-right: 1rem;
+      }
+      span {
+        position: absolute;
+        left: 2.75rem;
+      }
+    }
+  }
 }
