--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -30,6 +30,7 @@ header {
         color:white;
         margin-bottom: .75rem;
         margin-top: .75rem;
+        position: relative;
 
         font-size: 11px;
         //font-weight: 600;
@@ -37,7 +38,28 @@ header {
         text-transform: uppercase;
 
         &.active {
-          border-bottom: solid 1px $active-navigation-link-color;
+          border-bottom: solid 2px $active-navigation-link-color;
+        }
+
+        &:not(.active):after {
+          content: "";
+          transition: -webkit-transform .25s ease;
+          transition: transform .25s ease;
+          position: absolute;
+          left: 0;
+          bottom: -1px;
+          height: 2px;
+          background: $primary-color;
+          display: block;
+          width: 100%;
+          -webkit-transform: scaleX(0);
+          transform: scaleX(0);
+        }
+
+        &:hover {
+          &:after {
+            transform: scaleX(.85);
+          }
         }
       }
     }
