--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -1,6 +1,7 @@
 $active-navigation-link-color: orange;
 $fa-font-path:   "../bower_components/font-awesome/fonts";
 $gray-text-color: #444444;
+$gray-bg-color: #f9f9f9;
 
 //  Foundation for Sites Settings
 //  -----------------------------
