--- a/app/scss/about-us.scss
+++ b/app/scss/about-us.scss
@@ -53,7 +53,17 @@
 }
 
 .our-team {
-  background-color: #f9f9f9;
+  background-color: $gray-bg-color;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+
+  .row {
+    margin-bottom: 2rem;
+  }
+}
+
+.latest-work {
+  //background-color: #f9f9f9;
   padding-top: 4rem;
   padding-bottom: 4rem;
 
