Added font awesome fonts to dist directory.

--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -1,5 +1,5 @@
 $active-navigation-link-color: orange;
-$fa-font-path:   "../bower_components/font-awesome/fonts";
+$fa-font-path:   "../dist/fonts";
 $gray-text-color: #444444;
 $gray-bg-color: #f9f9f9;
 
