Tweaked home page mobile view.

--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -12,9 +12,9 @@
   .hero-text {
     position: relative;
 
-    @include breakpoint(small only) {
-      top: -5rem;
-    }
+    //@include breakpoint(small only) {
+    //  top: -5rem;
+    //}
 
     h1, h2, h3, h4, h5, p {
       color: white;
