--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -5,7 +5,8 @@ header {
   width: 100%;
 
   @include breakpoint(small only) {
-    height: auto;
+    //height: auto;
+    display: none;
   }
 
   .row:first-of-type {
