--- a/app/scss/_contact-us.scss
+++ b/app/scss/_contact-us.scss
@@ -29,4 +29,13 @@
     }
     margin-bottom: 3rem;
   }
+
+  .callout {
+    opacity: 0;
+    border-right: 0;
+    border-top: 0;
+    border-bottom: 0;
+    border-left: 7px solid $primary-color;
+    background-color: $gray-bg-color;
+  }
 }
