--- a/app/scss/_settings.scss
+++ b/app/scss/_settings.scss
@@ -1,4 +1,4 @@
-$active-navigation-link-color: orange;
+$cinescape-color: red;
 $fa-font-path:   "../dist/fonts";
 $gray-text-color: #444444;
 $gray-bg-color: #f9f9f9;
