--- a/app/scss/_contact-us.scss
+++ b/app/scss/_contact-us.scss
@@ -35,7 +35,7 @@
     border-right: 0;
     border-top: 0;
     border-bottom: 0;
-    border-left: 7px solid $primary-color;
+    border-left: 7px solid $alert-color;
     background-color: $gray-bg-color;
   }
 }
