--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -9,7 +9,7 @@
   .sectionIndicatorWrapper {
     position: absolute;
     top: 100px;
-    left: calc(50% - 15px);
+    left: 15px;// calc(50% - 15px);
     color: #fff;
 
     ul {
@@ -21,7 +21,8 @@
     .sectionIndicator {
       font-size: 30px;
       width: 20px;
-      float: left;
+      line-height: .7;
+      //float: left;
 
       &.active {
         color:$cinescape-color;
@@ -29,16 +30,17 @@
     }
 
     .sectionProgress {
-      height: 1px;
-      width: 100%;
-      top: 25px;
-      position: relative;
+      height: 75%;
+      width: 2px;
+      top: 5px;
+      position: absolute;
       transform: scaleX(1);
+      right: -5px;
       background-color: darken($cinescape-color, 20%);
 
-      @include breakpoint(small only) {
-        display:none;
-      }
+      //@include breakpoint(small only) {
+      //  display:none;
+      //}
     }
   }
 
