--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -35,8 +35,9 @@
       top: 5px;
       position: absolute;
       transform: scaleX(1);
+      transform-origin: 50% 50%;
       right: -5px;
-      background-color: darken($cinescape-color, 20%);
+      background-color: transparentize(darken($cinescape-color, 20%), .33);
 
       //@include breakpoint(small only) {
       //  display:none;
