--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,3 +1,8 @@
+//.title-bar:first-of-type {
+//  position:absolute;
+//  z-index: 1;
+//}
+
 .title-bar > .title-bar-title > a {
   color: white;
 }
