--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -56,7 +56,13 @@
     transition: opacity 2.0s cubic-bezier(0.165, 0.84, 0.44, 1);
     opacity: 0;
     top: 0;
+    left: 0;
+    z-index: 0;
     @include hero(100vh);
+
+    @include breakpoint(small only) {
+      top: 56px;
+    }
 
     &.hero-active {
       opacity: 1;
@@ -69,6 +75,7 @@
     width: 100%;
     height: inherit;
     top: 0;
+    left: 0;
 
     @include breakpoint(small only) {
       top: $topbar-height;
