--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -96,6 +96,7 @@
 
     hr {
       max-width: 700px;
+      border-width: 2px;
       border-bottom-color: rgba(255, 255, 255, 0.32);
 
       //&::before {
@@ -111,7 +112,8 @@
     .title-wrapper {
       height: 55px;
 
-      p {
+      a {
+        display: block;
         color: $white;
         line-height: 1;
         opacity: .3;
@@ -126,8 +128,17 @@
           font-size: 200%;
         }
 
+        &:hover {
+          opacity: 1;
+          //color: $cinescape-color;
+        }
+
         &.active {
           opacity: 1;
+
+          //&:hover {
+          //  color: $white;
+          //}
           //border-bottom: solid 1px rgba(255, 255, 255, 0.32);
           //max-width: 700px;
         }
