--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -32,11 +32,13 @@ header {
       background: url('images/logo-bg-no-frame-dark.svg') no-repeat center center;
       //background-size: cover;
       height: 75px;
-      max-width: 90vw;
+      max-width: 100%;
       display: inline-block;
       width: 267px;
       transition: background 300ms;
       //background-repeat: no-repeat;
+      //width: 100%;
+      background-size: 100% 100%;
 
       &:hover {
         background-color: rgb(31, 31, 31);
@@ -49,17 +51,28 @@ header {
     margin-top: 10px;
 
     li {
+
+
+
+      &:last-of-type {
+        a {
+          border-right: none;
+        }
+      }
+
       a {
         line-height: .5;
         color: #2A2A2A;
         margin-bottom: .75rem;
         margin-top: .75rem;
         position: relative;
-
-        font-size: 13px;
+        border-right: 1px solid rgba(255, 255, 255, 0.25);
+        font-size: 10px;
         //font-weight: 600;
         letter-spacing: 2px;
         text-transform: uppercase;
+
+
 
         &:not(.active):after {
           content: "";
