--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -136,6 +136,9 @@
         &.active {
           opacity: 1;
 
+          cursor: default;
+          pointer-events: none;
+
           //&:hover {
           //  color: $white;
           //}
