--- a/app/scss/_about-us.scss
+++ b/app/scss/_about-us.scss
@@ -68,6 +68,11 @@
   padding-top: 4rem;
   padding-bottom: 4rem;
 
+  h1 {
+    border-bottom: solid 1px #d6d6d6;
+    margin-bottom: 13px;
+  }
+
   .row {
     margin-bottom: 2rem;
   }
