--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -26,7 +26,7 @@ html, body {height: 100%;}
   clear:both;
   border-top: 1px solid $medium-gray;
   //padding-top: 2rem;
-  box-shadow: 0 0 22px 0 #E3E3E3;
+  //box-shadow: 0 0 22px 0 #E3E3E3;
   background-color: #3A3A3A;
   color: white;
 
