--- a/app/scss/_contact-card.scss
+++ b/app/scss/_contact-card.scss
@@ -30,16 +30,16 @@
     width: 100%;
     height: 70%;
     //background-image: url('https://0.s3.envato.com/files/183626516/Image/Image_Profile.jpg');
-    background-position: 50%;
+    background-position: 50% 0;
     background-size: cover;
     z-index: 3;
     text-align: center;
     border-top-left-radius: 30px;
     border-top-right-radius: 30px;
-    transition: all .5s ease-in-out;
+    //transition: all .5s ease-in-out;
 
-    @include breakpoint(small up) {
-      height: 70%;
+    @include breakpoint(medium down) {
+      background-position: 50% 25%;
     }
 
     span {
