--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -10,15 +10,16 @@
 a.logo {
   i {
     background: url('images/logo-bg-no-frame-dark.svg') no-repeat center center;
-    //background-size: cover;
     height: 75px;
     max-width: 100%;
     display: inline-block;
     width: 267px;
     transition: background 300ms;
-    //background-repeat: no-repeat;
-    //width: 100%;
-    background-size: 100% 100%;
+    background-size: auto 100%;
+
+    @include breakpoint(medium only) {
+      max-width: 180%;
+    }
 
     &:hover {
       background-color: rgb(31, 31, 31);
