Added contact-us php script and google recaptcha.

--- a/app/scss/_contact-us.scss
+++ b/app/scss/_contact-us.scss
@@ -38,4 +38,9 @@
     border-left: 7px solid $alert-color;
     background-color: $gray-bg-color;
   }
+
+  .g-recaptcha {
+    float: right;
+    margin-bottom: 8px;
+  }
 }
