Added about us hero image locally. Fixed recaptcha init bug.

--- a/app/scss/_about-us.scss
+++ b/app/scss/_about-us.scss
@@ -1,5 +1,5 @@
 .about-hero {
-  background: url('http://cinescape.us/wp-content/uploads/2016/04/drone_blurred_small.jpg') no-repeat center center;
+  background: url('images/drone_blurred_small.jpg') no-repeat center center;
   @include hero(625px);
 
   &:before {
