Added brandon and darren photo. Updated section text.

--- a/app/scss/_contact-card.scss
+++ b/app/scss/_contact-card.scss
@@ -46,6 +46,7 @@
     span {
       display:block;
       color: white;
+      text-shadow: 1px 1px black;
       width: 100%;
 
       &:first-of-type {
