--- a/app/scss/_feature-list.scss
+++ b/app/scss/_feature-list.scss
@@ -10,6 +10,12 @@
       padding-top: 4rem;
       padding-bottom: 4rem;
 
+      h2 {
+        @include breakpoint(small only) {
+          font-size: 138%;
+        }
+      }
+
       p {
         font-size: 110%;
 
